# serverless-lakehouse

./: .gitignore  README.md  adventure_works__metadata.xml  config.py  config.yaml  dag.mmd  elt.sh  external_models.yaml  generate_hook_models.py  generate_models.py  generate_raw_models.py  generate_staging_models.py  kpi_dashboard.py  pyproject.toml  spark-defaults.conf
model_generators/: generate_all_models.py  generate_hook_bags.py  generate_uss_bridge_union.py  generate_uss_bridges.py  generate_uss_peripherals.py
models/bronze/: raw__adventure_works__addresses.sql  raw__adventure_works__credit_cards.sql  raw__adventure_works__currency_rates.sql  raw__adventure_works__customers.sql  raw__adventure_works__persons.sql  raw__adventure_works__product_categories.sql  raw__adventure_works__product_subcategories.sql  raw__adventure_works__products.sql  raw__adventure_works__sales_order_details.sql  raw__adventure_works__sales_order_headers.sql  raw__adventure_works__sales_persons.sql  raw__adventure_works__sales_territories.sql  raw__adventure_works__ship_methods.sql  raw__adventure_works__special_offers.sql  raw__adventure_works__state_provinces.sql  raw__adventure_works__stores.sql  raw__adventure_works__transaction_histories.sql  raw__adventure_works__transaction_history_archives.sql
models/gold/: _bridge.sql  _bridge__as_is.sql  _bridge__as_of.sql  _bridge__as_of_event.sql  _cube__metrics.sql  addresses.sql  calendar.py  customers.sql  (+14 more)
pipelines/: adventure_works.py  duckdb_to_delta.py
queries/: explode_date_range.sql  shipping_kpis.sql
streamlit/: dashboard.py
(+126 files in other folders)
